# fastxlsx

./: .gitignore  Cargo.toml  LICENSE  README.md  fastxlsx.pyi  pyproject.toml
.github/workflows/: CI.yml
benchmarks/: conftest.py
benchmarks/01_write/: adapters_write.py  base_write.py  test_write_batch.py  test_write_big_matrix.py  test_write_mixed_data.py  utils_write.py
benchmarks/02_read/: adapters_read.py  base_read.py  test_read_batch.py  test_read_big_matrix.py  test_read_mixed_data.py  utils_read.py
docs/: advanced_usage.rst  api.rst  conf.py  getting_started.rst  index.rst  requirements.txt
src/: fromcell.rs  lib.rs  read.rs  utils.rs  write.rs
src/types/: calamine_data.rs  cell_addr.rs  mod.rs
src/types/containers/: array1.rs  array2.rs  mod.rs
